v1.0.2
- [add] Synchronized注解提供参数throwExceptionIfNotGetLock，当获取不到锁时，抛出该异常，如果提供的异常实例化失败，将以默认的NotGetLockException代替

2021年7月12日
v1.0.1
- [add] HiSpeedCache添加cacheNullValue属性，支持配置返回null值时不缓存
- [upgrade] 升级jedis到3.6.1版本
- [upgrade] 移除javax.annotation.PostConstruct，使用InitializingBean代替，适应jdk11+的版本

v1.0.0
- [init] 初始代码来自于woo-utils 0.9.2版本https://github.com/pugwoo/woo-utils
- [add] HiSpeedCache增加控制fetch并行串行的能力，默认为相同缓存任务为串行，原为并行